src/Access-Control/pod_role.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-reader
  namespace: torino-tenant
spec:
  serviceAccountName: service-torino
  containers:
  - name: reader
    image: bitnami/kubectl:latest
    command: ["sleep", "3600"]
